# python-design-pattern

./: .pre-commit-config.yaml  README.md  pyproject.toml
behavioural/: _type.py  chain-of-responsibility.py
creational/: abstract_factory.py  bridge.py  factory_method.py  simple_factory.py  star-sample.py
structural/: adapter.py
