[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[tool.poetry]
name = "python-design-patterns"
version = "0.1.0"
description = "Design Patterns Written in Python"
authors = ["twotwo <twotwo.li@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
